tests/errors/arrays/bracket-element-type-mismatch.fn
---
Description: Element type mismatch with bracket array syntax
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var b: i32[] = [true, false]
        return 0
    }
}
